<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/general_prefs">
		<EditTextPreference android:key="first_day"
			android:defaultValue="1" android:title="@string/pref_first_day"
			android:inputType="number" android:maxLength="2"
			android:summary="@string/pref_first_day_summary" android:dialogTitle="@string/pref_first_day_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/hours_day">
		<TimePickerPreference android:key="hours_monday"
			android:defaultValue="9:00" android:title="@string/monday"
			android:summary="@string/dialog_hours_summary" android:dialogTitle="@string/dialog_hours_title" />
		<TimePickerPreference android:key="hours_tuesday"
			android:defaultValue="9:00" android:title="@string/tuesday"
			android:summary="@string/dialog_hours_summary" android:dialogTitle="@string/dialog_hours_title" />
		<TimePickerPreference android:key="hours_wednesday"
			android:defaultValue="9:00" android:title="@string/wednesday"
			android:summary="@string/dialog_hours_summary" android:dialogTitle="@string/dialog_hours_title" />
		<TimePickerPreference android:key="hours_thursday"
			android:defaultValue="9:00" android:title="@string/thursday"
			android:summary="@string/dialog_hours_summary" android:dialogTitle="@string/dialog_hours_title" />
		<TimePickerPreference android:key="hours_friday"
			android:defaultValue="8:00" android:title="@string/friday"
			android:summary="@string/dialog_hours_summary" android:dialogTitle="@string/dialog_hours_title" />
		<TimePickerPreference android:key="hours_saturday"
			android:defaultValue="0:00" android:title="@string/saturday"
			android:summary="@string/dialog_hours_summary" android:dialogTitle="@string/dialog_hours_title" />

	</PreferenceCategory>
</PreferenceScreen>
